/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.shared.subprocess;

option java_package = "com.google.devtools.mobileharness.shared.subprocess.proto";
option java_outer_classname = "AgentConfigProto";

// Configurations of a Mobile Harness subprocess agent.
message MobileHarnessAgentConfig {
  // Optional.
  //
  // True to enable the command history recording feature.
  bool enable_command_history = 1;

  // Optional.
  //
  // If non-empty and enable_command_history is true, the process will save a
  // LocalCommandRecords proto binary file of the command history of the process
  // when it exits.
  string command_history_file_path = 2;
}
